Fixed API issues
